--- a/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/packages.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/packages.yaml
@@ -164,6 +164,7 @@ systemd:
         # prevent the service from failing.
         ExecStart=/usr/bin/rpm-ostree install -y --allow-inactive $RPMS
         ExecStart=/bin/touch /var/lib/%N.stamp
+        ExecStart=/bin/systemctl disable coreos-oci-migration-motd.service
         ExecStart=/bin/systemctl --no-block reboot
 
         [Install]
