--- a/TerraformWorkShop/Quadlet/zot/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/zot/attachments/values-sololab.yaml
@@ -41,10 +41,24 @@ zot:
       #   cacert: "/etc/zot/certs/ca.crt"
       # https://zotregistry.dev/v2.1.8/admin-guide/admin-configuration/#authentication
       auth:
-        # https://zotregistry.dev/v2.1.8/articles/authn-authz/#htpasswd
-        htpasswd:
-          path: /etc/zot/htpasswd
-        failDelay: 5
+        ## user pass auth
+        ## https://zotregistry.dev/v2.1.8/articles/authn-authz/#htpasswd
+        # htpasswd:
+        #   path: /etc/zot/htpasswd
+        # failDelay: 5
+        ## ldap auth
+        ldap:
+          credentialsFile: /etc/zot/secret/ldap-credentials.json
+          address: lldap.day0.sololab
+          port: 636
+          startTLS: true
+          baseDN: ou=people,dc=root,dc=sololab
+          userAttribute: uid
+          userFilter: "(&(objectClass=person)(memberOf=cn=sso_allow,ou=groups,dc=root,dc=sololab))"
+          userGroupAttribute: memberOf
+          skipVerify: false
+          subtreeSearch: true
+
       # https://zotregistry.dev/v2.0.4/articles/authn-authz/#example-access-control-configuration
       accessControl:
         repositories:
@@ -53,7 +67,10 @@ zot:
             # https://github.com/project-zot/zot/blob/main/examples/README.md#identity-based-authorization
             anonymousPolicy: ["read"]
         adminPolicy:
-          users: ["admin"]
+          ## for user pass
+          # users: ["admin"]
+          ## for ldap
+          groups: ["cn=app-zot-admin,ou=groups,dc=root,dc=sololab"]
           actions: ["read", "create", "update", "delete"]
 
     # https://zotregistry.dev/v2.0.4/articles/storage/#configuring-zot-storage
@@ -67,8 +84,16 @@ zot:
       gc: true
     log:
       level: "info"
-  htpasswd: |
-    admin:$2y$05$S94dvsnxtN2tTONk8eTGEuABGfzDAcXXqkWbIg62mHyOe71PWRRGa
+  # htpasswd: |
+  #   admin:$2y$05$S94dvsnxtN2tTONk8eTGEuABGfzDAcXXqkWbIg62mHyOe71PWRRGa
+  secret:
+    contents:
+      ldap-credentials.json: |
+        {
+          "bindDN":"cn=readonly,ou=people,dc=root,dc=sololab",
+          "bindPassword":"readonly"
+        }
+
   podLabels:
     traefik.enable: true
     traefik.http.routers.zot-redirect.entrypoints: web
@@ -99,4 +124,4 @@ zot:
     # https://github.com/aquasecurity/trivy/issues/4169
     # https://github.com/aquasecurity/trivy/discussions/4194
     - name: SSL_CERT_DIR
-      value: /etc/zot/certs
+      value: /etc/zot/secret
