--- a/TerraformWorkShop/Quadlet/postgresql-infra/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/postgresql-infra/attachments/values-sololab.yaml
@@ -1,5 +1,5 @@
 global:
-  imageRegistry: zot.day0.sololab:5000
+  imageRegistry: zot.vyos.sololab
 postgresql:
   containerPorts:
     - name: postgresql
@@ -8,24 +8,16 @@ postgresql:
       hostIP: 192.168.255.10
       protocol: TCP
 
-  extraEnvVars:
-    - name: TZ
-      value: Asia/Shanghai
+  podAnnotations: null
   # %%OTHER_PARAMETERS_RELATED_TO_THIS_CONTAINER/POD%%
   ## @param postgresql.config environment variable config for postgresql
   config:
     ## @param postgresql.config.POSTGRESQL_USER User name for PostgreSQL account to be created
     ##
     POSTGRESQL_USER: terraform
-    ## @param postgresql.config.POSTGRESQL_PASSWORD Password for the user account
-    ##
-    POSTGRESQL_PASSWORD: terraform
     ## @param postgresql.config.POSTGRESQL_DATABASE Database name
     ##
     POSTGRESQL_DATABASE: tfstate
-    ## @param postgresql.config.POSTGRESQL_ADMIN_PASSWORD Password for the postgres admin account (optional)
-    ##
-    POSTGRESQL_ADMIN_PASSWORD: P@ssw0rd
   ## @param postgresql.extending directories to config extend feature for the image
   ## ref: https://github.com/sclorg/postgresql-container/blob/master/16/root/usr/share/container-scripts/postgresql/README.md#extending-image
   ##
@@ -37,3 +29,15 @@ postgresql:
         ssl = on
         ssl_cert_file = '/opt/app-root/src/certs/tls.crt'
         ssl_key_file =  '/opt/app-root/src/certs/tls.key'
+  secret:
+    envVars:
+      ## @param postgresql.secret.envVars.POSTGRESQL_PASSWORD Password for the user account
+      ##
+      POSTGRESQL_PASSWORD: terraform
+      ## @param postgresql.secret.envVars.POSTGRESQL_ADMIN_PASSWORD Password for the postgres admin account (optional)
+      ##
+      POSTGRESQL_ADMIN_PASSWORD: P@ssw0rd
+
+  extraEnvVars:
+    - name: TZ
+      value: Asia/Shanghai
