zitadel-deploy-podman-kube: upgrade image version, add postgresql workload, add startpre command

--- a/TerraformWorkShop/Quadlet/zitadel/attachments-postgresql/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/zitadel/attachments-postgresql/values-sololab.yaml
@@ -1,6 +1,12 @@
 global:
   imageRegistry: zot.vyos.sololab
 postgresql:
+  containerPorts:
+    - name: postgresql
+      containerPort: 5432
+      hostPort: 5432
+      hostIP: 127.0.0.1
+      protocol: TCP
   extraEnvVars:
     - name: TZ
       value: Asia/Shanghai
