--- a/TerraformWorkShop/Quadlet/zot/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/zot/attachments/values-sololab.yaml
@@ -85,14 +85,15 @@ zot:
     log:
       level: "info"
   secret:
-    contents:
-      # htpasswd: |
-      #   admin:$2y$05$S94dvsnxtN2tTONk8eTGEuABGfzDAcXXqkWbIg62mHyOe71PWRRGa
-      ldap-credentials.json: |
-        {
-          "bindDN":"cn=readonly,ou=people,dc=root,dc=sololab",
-          "bindPassword":"readonly"
-        }
+    others:
+      contents:
+        # htpasswd: |
+        #   admin:$2y$05$S94dvsnxtN2tTONk8eTGEuABGfzDAcXXqkWbIg62mHyOe71PWRRGa
+        ldap-credentials.json: |
+          {
+            "bindDN":"cn=readonly,ou=people,dc=root,dc=sololab",
+            "bindPassword":"readonly"
+          }
 
   podLabels:
     traefik.enable: true
