zitadel-deploy-podman-kube: upgrade image version, update resourcesPreset, move pod man related value setting to terraform value set in zitadel backend

--- a/TerraformWorkShop/Quadlet/zitadel/attachments-zitadel-login/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/zitadel/attachments-zitadel-login/values-sololab.yaml
@@ -42,7 +42,7 @@ zitadelLogin:
   config:
     CUSTOM_REQUEST_HEADERS: Host:zitadel.day0.sololab
     NEXT_PUBLIC_BASE_PATH: /ui/v2/login
-    ZITADEL_API_URL: http://zitadel-backend:8080
+    ZITADEL_API_URL: # set by terraform variable http://zitadel-backend:8080
     ZITADEL_SERVICE_USER_TOKEN_FILE: /data/login-client.pat
   extraEnvVars:
     - name: TZ
