FCOS-deploy-butane: improve disable motd script, upgrade FCOS version

--- a/TerraformWorkShop/Hyper-V/VM-Day0-FCOS/Butane/packages.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day0-FCOS/Butane/packages.yaml
@@ -162,9 +162,9 @@ systemd:
         [Service]
         Type=oneshot
         RemainAfterExit=yes
-        ExecStart=/usr/bin/rpm-ostree install -y --allow-inactive $RPMS
+        ExecStartPre=/usr/bin/rpm-ostree install -y --allow-inactive $RPMS
         ExecStart=/bin/touch /var/lib/%N.stamp
-        ExecStart=/bin/systemctl --no-block reboot
+        ExecStartPost=/bin/bash -c "systemctl disable coreos-container-signing-migration-motd.service && systemctl --no-block reboot"
 
         [Install]
         WantedBy=multi-user.target
