--- a/TerraformWorkShop/Hyper-V/VM-Day1-FCOS/Butane/packages.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day1-FCOS/Butane/packages.yaml
@@ -166,9 +166,9 @@ systemd:
         # if the package is already installed. This is useful if the package is
         # added to the root image in a future Fedora CoreOS release as it will
         # prevent the service from failing.
-        ExecStart=/usr/bin/rpm-ostree install -y --allow-inactive $RPMS
+        ExecStartPre=/usr/bin/rpm-ostree install -y --allow-inactive $RPMS
         ExecStart=/bin/touch /var/lib/%N.stamp
-        ExecStart=/bin/systemctl --no-block reboot
+        ExecStartPost=/bin/bash -c "systemctl disable coreos-container-signing-migration-motd.service && systemctl --no-block reboot"
 
         [Install]
         WantedBy=multi-user.target
