--- a/TerraformWorkShop/Quadlet/keycloak/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/keycloak/attachments/values-sololab.yaml
@@ -1,34 +1,2 @@
-postgresql:
-  image:
-    registry: zot.day0.sololab
-    repository: sclorg/postgresql-16-c10s
-    tag: "20250108"
-  extraEnvVars:
-    - name: TZ
-      value: Asia/Shanghai
-  # %%OTHER_PARAMETERS_RELATED_TO_THIS_CONTAINER/POD%%
-  ## @param postgresql.config environment variable config for postgresql
-  config:
-    ## @param postgresql.config.POSTGRESQL_USER User name for PostgreSQL account to be created
-    ##
-    POSTGRESQL_USER: keycloak
-    ## @param postgresql.config.POSTGRESQL_PASSWORD Password for the user account
-    ##
-    POSTGRESQL_PASSWORD: keycloak
-    ## @param postgresql.config.POSTGRESQL_DATABASE Database name
-    ##
-    POSTGRESQL_DATABASE: keycloak
-    ## @param postgresql.config.POSTGRESQL_ADMIN_PASSWORD Password for the postgres admin account (optional)
-    ##
-    POSTGRESQL_ADMIN_PASSWORD: P@ssw0rd
-  ## @param postgresql.extending directories to config extend feature for the image
-  ## ref: https://github.com/sclorg/postgresql-container/blob/master/16/root/usr/share/container-scripts/postgresql/README.md#extending-image
-  ##
-  extending:
-    ## @param postgresql.extending.cfg Configuration files (`*.conf`) contained in this directory (postgresql-cfg/) will be included at the end of the image's postgresql.conf file.
-    ## ref: https://github.com/sclorg/postgresql-container/blob/master/16/root/usr/share/container-scripts/postgresql/README.md#postgresql-cfg
-    cfg:
-      ssl.conf: |
-        ssl = on
-        ssl_cert_file = '/opt/app-root/src/certs/tls.crt'
-        ssl_key_file =  '/opt/app-root/src/certs/tls.key'
+global:
+  imageRegistry: zot.vyos.sololab
