--- a/TerraformWorkShop/Quadlet/zot/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/zot/attachments/values-sololab.yaml
@@ -2,13 +2,11 @@ zot:
   image:
     registry: zot.vyos.sololab
     repository: giantswarm/zot
-  containerPorts: []
-  resourcesPreset: medium
-  podRestartPolicy: OnFailure
+  resourcesPreset: small
   config:
-    # https://zotregistry.dev/v2.1.8/admin-guide/admin-configuration/#extensions
+    # https://zotregistry.dev/v2.1.10/admin-guide/admin-configuration/#extensions
     extensions:
-      # https://zotregistry.dev/v2.1.8/admin-guide/admin-configuration/#enhanced-searching-and-querying-images
+      # https://zotregistry.dev/v2.1.10/admin-guide/admin-configuration/#enhanced-searching-and-querying-images
       search:
         enable: true
         cve:
@@ -30,23 +28,27 @@ zot:
         prometheus:
           path: /metrics
     # Network configuration
-    # https://zotregistry.dev/v2.1.8/admin-guide/admin-configuration/#network-configuration
+    # https://zotregistry.dev/v2.1.10/admin-guide/admin-configuration/#network-configuration
     http:
       address: "127.0.0.1"
       port: "5000"
-      realm: "zot"
+      # When the zot registry is running behind a proxy or load balancer,
+      # you must provide an external URL for OpenID/OAuth2 clients to redirect back to zot.
+      # This externalUrl attribute is the URL of the registry
+      # externalUrl: https://zot.day0.sololab
+      realm: zot
       # tls:
       #   cert: "/etc/zot/certs/server.crt"
       #   key: "/etc/zot/certs/server.key"
       #   cacert: "/etc/zot/certs/ca.crt"
-      # https://zotregistry.dev/v2.1.8/admin-guide/admin-configuration/#authentication
+      # https://zotregistry.dev/v2.1.10/admin-guide/admin-configuration/#authentication
       auth:
         ## user pass auth
-        ## https://zotregistry.dev/v2.1.8/articles/authn-authz/#htpasswd
+        ## https://zotregistry.dev/v2.1.10/articles/authn-authz/#htpasswd
         # htpasswd:
         #   path: /etc/zot/htpasswd
         # failDelay: 5
-        ## ldap auth
+        ## https://zotregistry.dev/v2.1.10/articles/authn-authz/#ldap
         ldap:
           credentialsFile: /etc/zot/secret/ldap-credentials.json
           address: lldap.day0.sololab
@@ -58,6 +60,16 @@ zot:
           userGroupAttribute: memberOf
           skipVerify: false
           subtreeSearch: true
+        ## https://zotregistry.dev/v2.1.10/articles/authn-authz/#using-dex
+        # config.http.auth.openid.providers.oidc.issuer
+        # openid:
+        #   providers:
+        #     oidc:
+        #       credentialsFile: /etc/zot/secret/oidc-credentials.json
+        #       name: dex
+        #       issuer: https://dex.day0.sololab/
+        #       keypath:
+        #       scopes: ["openid", "profile", "email", "groups"]
 
       # https://zotregistry.dev/v2.0.4/articles/authn-authz/#example-access-control-configuration
       accessControl:
@@ -71,7 +83,9 @@ zot:
           # users: ["admin"]
           ## for ldap
           groups: ["cn=app-zot-admin,ou=groups,dc=root,dc=sololab"]
-          actions: ["read", "create", "update", "delete"]
+          ## for oidc
+          # groups: ["app-zot-admin"]
+          # actions: ["read", "create", "update", "delete"]
 
     # https://zotregistry.dev/v2.0.4/articles/storage/#configuring-zot-storage
     storage:
@@ -89,11 +103,9 @@ zot:
       contents:
         # htpasswd: |
         #   admin:$2y$05$S94dvsnxtN2tTONk8eTGEuABGfzDAcXXqkWbIg62mHyOe71PWRRGa
-        ldap-credentials.json: |
-          {
-            "bindDN":"cn=readonly,ou=people,dc=root,dc=sololab",
-            "bindPassword":"readonly"
-          }
+        ldap-credentials.json:
+          bindDN: cn=readonly,ou=people,dc=root,dc=sololab
+          bindPassword: readonly
 
   podLabels:
     traefik.enable: true
@@ -125,4 +137,4 @@ zot:
     # https://github.com/aquasecurity/trivy/issues/4169
     # https://github.com/aquasecurity/trivy/discussions/4194
     - name: SSL_CERT_DIR
-      value: /etc/zot/secret
+      value: /etc/zot/certs
