zitadel: deprecate, as v4 still not support user group https://github.com/zitadel/zitadel/issues/9702

--- a/LocalWorkShop/Sync-OCIImage/VyOS.deprecated.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/VyOS.deprecated.jsonc
@@ -13,4 +13,18 @@
         "privateRepo": "clivern/lynx:0.12.9",
         "description": "https://hub.docker.com/r/clivern/lynx?tab=tags",
     },
+    {
+        "publicRegistry": "ghcr.io",
+        "publicRepo": "zitadel/zitadel:v4.6.2",
+        "archive": "ghcr.io_zitadel_zitadel_v4.6.2.tar",
+        "privateRepo": "zitadel/zitadel:v4.6.2",
+        "description": "https://github.com/zitadel/zitadel/pkgs/container/zitadel/versions?filters%5Bversion_type%5D=tagged",
+    },
+    {
+        "publicRegistry": "ghcr.io",
+        "publicRepo": "zitadel/zitadel-login:v4.6.2",
+        "archive": "ghcr.io_zitadel_zitadel-login_v4.6.2.tar",
+        "privateRepo": "zitadel/zitadel-login:v4.6.2",
+        "description": "https://github.com/zitadel/zitadel/pkgs/container/zitadel/versions?filters%5Bversion_type%5D=tagged",
+    },
 ]
